5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1674_1105.log
== TEST (2019-04-27 11:46:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = Stark
leao = Lannister
veado = Baratheon
dragao = Targaryen
rosa = Tyrell
sol = Martell
lula = Greyjoy
esfolado = Bolton
turta = Tully
print("Entrada:",brasao)
if(brasao=="lobo"):
	print("Entrada:",brasao)
	print("Casa:",Stark)
elif(brasao=="leao"):
	print("Entrada:",brasao)
	print("Casa:",Lannister)
elif(brasao=="veado"):
	print("Entrada:",brasao)
	print("Casa:",Baratheon)
elif(brasao=="dragao"):
	print("Entrada:",brasao)
	print("Casa:",Targaryen)
elif(brasao=="rosa"):
	print("Entrada:",brasao)
	print("Casa:",Tyrell)
elif(brasao=="sol"):
	print("Entrada:",brasao)
	print("Casa:",Martell)
elif(brasao=="lula"):
	print("Entrada:",brasao)
	print("Casa:",Greyjoy)
elif(brasao=="esfolado"):
	print("Entrada:",brasao)
	print("Casa:",Bolton)
elif(brasao=="turta"):
	print("Entrada:",brasao)
	print("Casa:",Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lobo = Stark
NameError: name 'Stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:46:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = Stark
leao = Lannister
veado = Baratheon
dragao = Targaryen
rosa = Tyrell
sol = Martell
lula = Greyjoy
esfolado = Bolton
turta = Tully
print("Entrada:",brasao)
if(brasao=="lobo"):
	print("Entrada:",brasao)
	print("Casa:",Stark)
elif(brasao=="leao"):
	print("Entrada:",brasao)
	print("Casa:",Lannister)
elif(brasao=="veado"):
	print("Entrada:",brasao)
	print("Casa:",Baratheon)
elif(brasao=="dragao"):
	print("Entrada:",brasao)
	print("Casa:",Targaryen)
elif(brasao=="rosa"):
	print("Entrada:",brasao)
	print("Casa:",Tyrell)
elif(brasao=="sol"):
	print("Entrada:",brasao)
	print("Casa:",Martell)
elif(brasao=="lula"):
	print("Entrada:",brasao)
	print("Casa:",Greyjoy)
elif(brasao=="esfolado"):
	print("Entrada:",brasao)
	print("Casa:",Bolton)
elif(brasao=="turta"):
	print("Entrada:",brasao)
	print("Casa:",Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lobo = Stark
NameError: name 'Stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:47:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"
print("Entrada:",brasao)
if(brasao=="lobo"):
	print("Entrada:",brasao)
	print("Casa:",Stark)
elif(brasao=="leao"):
	print("Entrada:",brasao)
	print("Casa:",Lannister)
elif(brasao=="veado"):
	print("Entrada:",brasao)
	print("Casa:",Baratheon)
elif(brasao=="dragao"):
	print("Entrada:",brasao)
	print("Casa:",Targaryen)
elif(brasao=="rosa"):
	print("Entrada:",brasao)
	print("Casa:",Tyrell)
elif(brasao=="sol"):
	print("Entrada:",brasao)
	print("Casa:",Martell)
elif(brasao=="lula"):
	print("Entrada:",brasao)
	print("Casa:",Greyjoy)
elif(brasao=="esfolado"):
	print("Entrada:",brasao)
	print("Casa:",Bolton)
elif(brasao=="turta"):
	print("Entrada:",brasao)
	print("Casa:",Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 34, in <module>
    print("Casa:",Greyjoy)
NameError: name 'Greyjoy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:51:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"
print("Entrada:",brasao)
if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa:",Stark)
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa:",Lannister)
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa:",Baratheon)
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa:",Targaryen)
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa:",Tyrell)
elif(brasao==sol):
	print("Entrada:",brasao)
	print("Casa:",Martell)
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa:",Greyjoy)
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa:",Bolton)
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa:",Tully)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:53:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada: brasao")
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 11:53:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada: brasao")
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
-- EXECUTION TIME:
0.146635
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:54:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada: brasao")
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:56:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada: brasao")
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:57:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = "Stark"
leao = "Lannister"
veado = "Baratheon"
dragao = "Targaryen"
rosa = "Tyrell"
sol = "Martell"
lula = "Greyjoy"
esfolado = "Bolton"
turta = "Tully"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:00:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
lobo = Stark
leao = Lannister
veado = Baratheon
dragao = Targaryen
rosa = Tyrell
sol = Martell
lula = Greyjoy
esfolado = Bolton
turta = Tully

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lobo = Stark
NameError: name 'Stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:02:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark = lobo
Lannister = leao
Baratheon = veado
Targaryen = dragao
Tyrell = rosa
Martell = sol
Greyjoy = lula
Bolton = esfolado
Tully = turta

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:04:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark ="lobo"
Lannister ="leao"
Baratheon ="veado"
Targaryen ="dragao"
Tyrell ="rosa"
Martell ="sol"
Greyjoy ="lula"
Bolton ="esfolado"
Tully ="turta"

if(brasao==lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao==leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao==veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao==lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao==turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if(brasao==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:10:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark ="lobo"
Lannister ="leao"
Baratheon ="veado"
Targaryen ="dragao"
Tyrell ="rosa"
Martell ="sol"
Greyjoy ="lula"
Bolton ="esfolado"
Tully ="turta"
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if(brasao==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:11:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark = lobo
Lannister = leao
Baratheon = veado
Targaryen = dragao
Tyrell = rosa
Martell = sol
Greyjoy = lula
Bolton = esfolado
Tully = turta
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:11:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark = lobo
Lannister = leao
Baratheon = veado
Targaryen = dragao
Tyrell = rosa
Martell = sol
Greyjoy = lula
Bolton = esfolado
Tully = turta
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:11:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark = lobo
Lannister = leao
Baratheon = veado
Targaryen = dragao
Tyrell = rosa
Martell = sol
Greyjoy = lula
Bolton = esfolado
Tully = turta
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:12:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= lobo
Lannister= leao
Baratheon= veado
Targaryen= dragao
Tyrell= rosa
Martell= sol
Greyjoy= lula
Bolton= esfolado
Tully= turta
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark= lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:04:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= lobo
Lannister= leao
Baratheon= veado
Targaryen= dragao
Tyrell= rosa
Martell= sol
Greyjoy= lula
Bolton= esfolado
Tully= turta
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark= lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:05:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= lobo
Lannister= "leao"
Baratheon= "veado"
Targaryen= "dragao"
Tyrell= "rosa"
Martell= "sol"
Greyjoy= "lula"
Bolton= "esfolado"
Tully= "turta"
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Stark= lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:06:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= "lobo"
Lannister= "leao"
Baratheon= "veado"
Targaryen= "dragao"
Tyrell= "rosa"
Martell= "sol"
Greyjoy= "lula"
Bolton= "esfolado"
Tully= "turta"
print("Entrada:",brasao)
if(brasao==lobo):
	print("Casa: Stark")
elif(brasao==leao):
	print("Casa: Lannister")
elif(brasao==veado):
	print("Casa: Baratheon")
elif(brasao==dragao):
	print("Casa: Targaryen")
elif(brasao==rosa):
	print("Casa: Tyrell")
elif(brasao==sol):
	print("Casa: Martell")
elif(brasao==lula):
	print("Casa: Greyjoy")
elif(brasao==esfolado):
	print("Casa: Bolton")
elif(brasao==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if(brasao==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:07:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= "lobo"
Lannister= "leao"
Baratheon= "veado"
Targaryen= "dragao"
Tyrell= "rosa"
Martell= "sol"
Greyjoy= "lula"
Bolton= "esfolado"
Tully= "turta"
print("Entrada:",brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:07:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao= input("brasao:").lower()
Stark= "lobo"
Lannister= "leao"
Baratheon= "veado"
Targaryen= "dragao"
Tyrell= "rosa"
Martell= "sol"
Greyjoy= "lula"
Bolton= "esfolado"
Tully= "turta"
print("Entrada:",brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.131538
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
